third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-borrow-tests/writeref_borrow_valid2.exp
module 0x8675309::M {
    struct S {
        f: u64,
        g: u64,
        h: u64,
    }
    fun t1(root: &mut S, cond: bool) {
        let _t2;
        if (cond) _t2 = &mut root.f else _t2 = &mut root.g;
        &mut root.h = 0;
    }
    fun t2(root: &mut S, cond: bool) {
        let _t2;
        if (cond) _t2 = &mut root.f else _t2 = &mut root.g;
        &mut root.f;
        &mut root.g;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
   ┌─ writeref_borrow_valid2.move:10:9
   │
10 │         &mut root.h = 0;
   │         ^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
